[fix] overflow-x

--- a/src/styles/partials/home.scss
+++ b/src/styles/partials/home.scss
@@ -113,5 +113,20 @@
 
 .my_card{
     box-shadow: 1px 3px 8px rgba($bnb-dark, 0.4);
+    min-height: 200px;
 
+}
+
+
+.img-wrapper-jumbo {
+    height: 500px;
+    overflow: hidden;
+
+    img {
+        width: 100%;
+    }
+}
+
+.row_jumbo{
+    max-width: 100vw;
 }
